***********************************
versions-2.2.0dev

NEW FEATURES

  - New --skipMutectOrientationModel option to turn off the learn orientation model step
  - Add `--facetsOpts` parameter #168
  - Filter out low mapping samples
  - Add MSIsensor-pro for tumor only samples (`--msiBaselineConfig`) #143

SIGNIFICANT USER-VISIBLE CHANGES

  - Replace all [-. ] in sample name by '_' #163
  - Distinguish the annotation of somatic and germline variants
  - Automatically clean the work directory (see --disableAutoClean) #183
  - By default, only PASS somatic variants are exported - use `--saveVcfIntermediatest` to export additional results
  - Speed-up parallel processing and avoid waiting for all the samples at the different steps #158
  - Update skip options
  - Update Facets outputs #168
  - Update mosdepth report in MultiQC #161

BUG FIXES

  - Fix bug with HaplotypeCaller for WGS in parallel mode (#175)

***********************************
versions-2.1.1

NEW FEATURES

  - Add TMB in Tumor Only mode

BUG FIXES

  - Bug in --skipFastqc option. Typo in modules.conf

SIGNIFICANT USER-VISIBLE CHANGES

  - Bam files after bqsr are exported by default. If --skipBQSR is used, the bams after filering will be exported

***********************************
version-2.1.0

NEW FEATURES

  - New --splitFastq and --fastqChunksSize options to split input reads
  - Support intervals parallel computing for WGS. See `--noIntervals`
  - add '--pon' option for tumor only samples in Mutect2
  - Update the calculate contamination process by including the segment files (#143)
  - Support bwa-mem2/DRAGMAP mapper (#100, #148)
  - Update annotation file for Mutect2 calling
  - Update versions of following tools:
    - preseq 2.0.3 -> 3.2.0
    - samtools 1.10 -> 1.15.1
    - bcftools 1.10.2 -> 1.15.1
    - picard 2.19.0 -> 2.27.4
    - multiqc 1.9 -> 1.13
    - mosdepth 0.2.9 -> 0.3.1
    - gatk 4.1.6.0 -> 4.1.8.0
    - r-base 3.6.3 -> 4.1.3

SIGNIFICANT USER-VISIBLE CHANGES
