@@ -23,7 +23,7 @@
 
 params {
   disableAutoClean = true
-  config_profile_name = 'VEGAN WES test data'
+  config_profile_name = 'VEGAN WES-TUMOR-ONLY test data'
   configProfileDescription = 'Minimal test dataset to check pipeline functions'
 
   // Limit resources so that this can run
@@ -46,8 +46,10 @@ params {
     samplePlan = "${projectDir}/test/csv/wes_vcf_splan.csv"
   }
 
-  // Design
-  design = "${projectDir}/test/csv/wes_design.csv"
+  //design
+  design = "${projectDir}/test/csv/wes_design_tumor_only.csv"
+  pon = "${params.genomeAnnotationPath}/Human/hg38/tool_databases/nf-vegan/small_exac_common_3.hg38.vcf.gz"
+  ponIndex = "${params.genomeAnnotationPath}/Human/hg38/tool_databases/nf-vegan/small_exac_common_3.hg38.vcf.gz.tbi"
 
   // Tools
   //tools = 'haplotypecaller'
