@@ -23,7 +23,7 @@
 
 params {
   disableAutoClean = true
-  config_profile_name = 'VEGAN WES test data'
+  config_profile_name = 'VEGAN WGS test data'
   configProfileDescription = 'Minimal test dataset to check pipeline functions'
 
   // Limit resources so that this can run
@@ -35,26 +35,15 @@ params {
   genome =  'hg38'
 
   //Step
-  step =  'mapping' // 'filtering','calling','annotate'
-  if (params.step == "mapping"){
-    samplePlan = "${projectDir}/test/csv/wes_splan.csv"
-  }else if (params.step == "filtering"){
-    samplePlan = "${projectDir}/test/csv/wes_bam_splan.csv"
-  }else if (params.step == "calling"){
-    samplePlan = "${projectDir}/test/csv/wes_bam_splan.csv"
-  }else if (params.step == "annotate"){
-    samplePlan = "${projectDir}/test/csv/wes_vcf_splan.csv"
-  }
+  samplePlan = "${projectDir}/test/csv/wgs_splan.csv"
 
   // Design
-  design = "${projectDir}/test/csv/wes_design.csv"
+  design = "${projectDir}/test/csv/wgs_design.csv"
+  pon = "${params.genomeAnnotationPath}/Human/hg38/tool_databases/nf-vegan/small_exac_common_3.hg38.vcf.gz"
+  ponIndex = "${params.genomeAnnotationPath}/Human/hg38/tool_databases/nf-vegan/small_exac_common_3.hg38.vcf.gz.tbi"
 
   // Tools
-  //tools = 'haplotypecaller'
-  tools = 'mutect2,snpeff,facets,tmb' //msisensor
-
-  // Target
-  targetBed = "${projectDir}/test/target/test_vegan_hg38.bed"
+  tools = 'mutect2,snpeff'
 
   // Annotation
   annotDb = 'cosmic,icgc,cancerhotspots,gnomad,dbnsfp'
