@@ -1,6 +1,8 @@
 # Troubleshooting
 
-## `Facets` in tumor-only mode
+## Tumor-only mode
+
+## CNVs with `Facets`
 
 `Facets` requires a normal to be run. However, the normal can be unmatch.  
 In this case, the easier would be to start from bam files, with a design file specifying 
@@ -8,11 +10,10 @@ unmatch pairs, and to run VEGAN with the option `--facetsOpts '--unmatch --hetTh
 In this mode, heterogygous SNPs are called using tumor reads only and logOR calculations are different.
 That's why it is recommanded to descrease the minimal VAF value to call a SNP heterozygous (`--hetThres`)
 
-## Running `MSIsensor-pro` in tumor-only mode
+## Running `MSIsensor-pro`
 
 To run on a single tumor, MSIsensor-pro requires to build a baseline from a panel of normal samples.
-By default, `VEGAN` will build this baseline with all 'germline' samples (defined in the design file).
-However, if you want to specify a list of other BAM files to use as baseline, simply create a configuration file as follow:
+To do so, you have to specify a list of BAM files to use as baseline, by creating a configuration file as follow:
 
 ```
 case1   /path/to/normal/case1_sorted.bam
@@ -20,7 +21,10 @@ case2   /path/to/normal/case2_sorted.bam
 case3   /path/to/normal/case3_sorted.bam
 ```
 
-And specify the config file using the `--msiBaselineConfig` parameters.
+The index file (.bai) should be in the same folder than the BAM files.  
+You can then specify the config file using the `--msiBaselineConfig` parameter.  
+According to the [MSIsensor-pro manual](https://github.com/xjtu-omics/msisensor-pro/wiki/Best-Practices), at least 20 normal samples
+are recommanded.
 
 ```
 nextflow run main.nf \
@@ -35,6 +39,6 @@ nextflow run main.nf \
   --containers.specificBinds '/data/'
 ```
 
-Of note, do not forget to bind the specific folder containings the BAM files you want to use as baseline, otherwise `MSIsensor`
-will not be able to read them.
+Of note if you are using `singularity`, do not forget to bind the specific folder containings the BAM files you want to use as baseline, 
+otherwise `MSIsensor` will not be able to read them.
 
