@@ -154,4 +154,10 @@ profiles {
   test {
     includeConfig 'conf/test.config'
   }
+  testwgs {
+    includeConfig 'conf/test_wgs.config'
+  }
+  testwes {
+    includeConfig 'conf/test_wes.config'
+  }
 }
