@@ -1,3 +1,3 @@
 GERMLINE_ID,TUMOR_ID,PAIR_ID,SEX
 D262E01_N,D262E02_T,D262E02_vs_01,XX
-,D262E02_T,D262E02_T,
+,D262E02_T,D262E02_T,XX
