@@ -1,4 +1,4 @@
 TUMOR_ID,GERMLINE_ID,PAIR_ID,SEX
 9876T,1234N,12349876,XX
-,1234N,12349876,X
+,1234N,12349876,XX
 9876T,,12349876,XX
