@@ -7,6 +7,7 @@ NEW FEATURES
   - Add `--facetsOpts` parameter #168
   - Filter out low mapping samples
   - Add MSIsensor-pro for tumor only samples (`--msiBaselineConfig`) #143
+  - Add `-profile testwgs` and `-profile testwes` for Tumor-Only and WGS test set
 
 SIGNIFICANT USER-VISIBLE CHANGES
 
